<?xml version="1.0"?>
<package format="2">
  <name>laser_deskew</name>
  <version>0.0.1</version>
  <description>laser deskew</description>

  <maintainer email="xxx@xxx.com">anson</maintainer>

  <license>BSD</license>
  <author>xxx</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>

</package>
