<?xml version="1.0"?>
<package format="2">
  <name>laser_localization</name>
  <version>0.0.1</version>
  <description>using laser as main sensor for localization</description>

  <maintainer email="xxx@xxx.com">anson</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>mrpt2</depend>
  <depend>mrpt_msgs</depend>
  <depend>common_msg</depend>
  <depend>dynamic_reconfigure</depend>

</package>
